a few changes in message services, lots of updates due to license addition for 2012